// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitted legacy CSS vars (behavior-preserving contract) > mint theme emits the frozen var set 1`] = `
{
  "--accent-bg": "rgba(26, 107, 74, 0.1)",
  "--accent-primary": "#165a3e",
  "--accent-text": "#165a3e",
  "--alert-caution": "#9a1922",
  "--alert-important": "#5d39a0",
  "--alert-note": "#074c9f",
  "--alert-tip": "#135b27",
  "--alert-warning": "#6c4800",
  "--bg-color": "#CCE6D0",
  "--bg-secondary": "#b8d9bd",
  "--bg-tertiary": "#a8c9ad",
  "--block-bg-subtle": "rgba(0, 0, 0, 0.02)",
  "--block-bg-subtle-hover": "rgba(0, 0, 0, 0.04)",
  "--blur-text-color": "#c8c8c8",
  "--border-color": "#a8c9ad",
  "--code-bg-color": "#b8d9bd",
  "--code-border-color": "#a8c9ad",
  "--code-text-color": "#1a1a1a",
  "--contrast-text": "white",
  "--control-border": "#63796a",
  "--emphasis-color": "#6b4423",
  "--error-bg": "#ffebe9",
  "--error-color": "#9a1922",
  "--error-color-hover": "#9c1818",
  "--highlight-bg": "#fff3a3",
  "--highlight-text": "inherit",
  "--hover-bg": "rgba(0, 0, 0, 0.06)",
  "--hover-bg-strong": "rgba(0, 0, 0, 0.08)",
  "--md-char-color": "#747474",
  "--meta-content-color": "#747474",
  "--primary-color": "#165a3e",
  "--quote-text": "#4f4f4f",
  "--selection-color": "rgba(26, 107, 74, 0.2)",
  "--sidebar-bg": "#b8d9bd",
  "--source-mode-bg": "rgba(0, 0, 0, 0.02)",
  "--strong-color": "#195948",
  "--subtle-bg": "rgba(0, 0, 0, 0.03)",
  "--subtle-bg-hover": "rgba(0, 0, 0, 0.04)",
  "--success-color": "#0c5b29",
  "--success-color-hover": "#0f5b2b",
  "--table-border-color": "#a8c9ad",
  "--text-color": "#2d3a35",
  "--text-secondary": "#4f4f4f",
  "--text-tertiary": "#747474",
  "--warning-bg": "rgba(245, 158, 11, 0.1)",
  "--warning-bg-active": "rgba(245, 158, 11, 0.2)",
  "--warning-bg-hover": "rgba(245, 158, 11, 0.15)",
  "--warning-border": "rgba(245, 158, 11, 0.3)",
  "--warning-color": "#6c4800",
}
`;

exports[`emitted legacy CSS vars (behavior-preserving contract) > night theme emits the frozen var set 1`] = `
{
  "--accent-bg": "rgba(90, 168, 255, 0.12)",
  "--accent-primary": "#61abff",
  "--accent-text": "#61abff",
  "--alert-caution": "#fa8580",
  "--alert-important": "#ba95f9",
  "--alert-note": "#61abff",
  "--alert-tip": "#49bd5a",
  "--alert-warning": "#d49e2c",
  "--bg-color": "#23262b",
  "--bg-secondary": "#2e323a",
  "--bg-tertiary": "#383d46",
  "--block-bg-subtle": "rgba(255, 255, 255, 0.03)",
  "--block-bg-subtle-hover": "rgba(255, 255, 255, 0.05)",
  "--blur-text-color": "#6b7078",
  "--border-color": "#3a3f46",
  "--code-bg-color": "#2e323a",
  "--code-border-color": "#3a3f46",
  "--code-text-color": "#d1d5db",
  "--contrast-text": "#23262b",
  "--control-border": "#777b81",
  "--emphasis-color": "#d29c69",
  "--error-bg": "rgba(248, 81, 73, 0.15)",
  "--error-color": "#fa8580",
  "--error-color-hover": "#fca5a5",
  "--highlight-bg": "#5c5c00",
  "--highlight-text": "#fff3a3",
  "--hover-bg": "rgba(255, 255, 255, 0.08)",
  "--hover-bg-strong": "rgba(255, 255, 255, 0.12)",
  "--md-char-color": "#7aa874",
  "--meta-content-color": "#7aa874",
  "--primary-color": "#61abff",
  "--quote-text": "#a2a8ad",
  "--selection-color": "rgba(90, 168, 255, 0.22)",
  "--sidebar-bg": "#2e323a",
  "--source-mode-bg": "rgba(255, 255, 255, 0.02)",
  "--strong-color": "#6cb6ff",
  "--subtle-bg": "rgba(255, 255, 255, 0.04)",
  "--subtle-bg-hover": "rgba(255, 255, 255, 0.06)",
  "--success-color": "#4ade80",
  "--success-color-hover": "#86efac",
  "--table-border-color": "#3a3f46",
  "--text-color": "#d6d9de",
  "--text-secondary": "#a2a8ad",
  "--text-tertiary": "#777c83",
  "--warning-bg": "rgba(245, 158, 11, 0.1)",
  "--warning-bg-active": "rgba(245, 158, 11, 0.2)",
  "--warning-bg-hover": "rgba(245, 158, 11, 0.15)",
  "--warning-border": "rgba(210, 153, 34, 0.3)",
  "--warning-color": "#d49e2c",
}
`;

exports[`emitted legacy CSS vars (behavior-preserving contract) > paper theme emits the frozen var set 1`] = `
{
  "--accent-bg": "rgba(0, 102, 204, 0.1)",
  "--accent-primary": "#005cb9",
  "--accent-text": "#005cb9",
  "--alert-caution": "#b81e29",
  "--alert-important": "#6f44bf",
  "--alert-note": "#085bbe",
  "--alert-tip": "#166d2f",
  "--alert-warning": "#815600",
  "--bg-color": "#EEEDED",
  "--bg-secondary": "#dedddd",
  "--bg-tertiary": "#d9d8d8",
  "--block-bg-subtle": "rgba(0, 0, 0, 0.02)",
  "--block-bg-subtle-hover": "rgba(0, 0, 0, 0.04)",
  "--blur-text-color": "#c8c8c8",
  "--border-color": "#d5d4d4",
  "--code-bg-color": "#dedddd",
  "--code-border-color": "#d5d4d4",
  "--code-text-color": "#1a1a1a",
  "--contrast-text": "white",
  "--control-border": "#7e7d7d",
  "--emphasis-color": "#5b0411",
  "--error-bg": "#ffebe9",
  "--error-color": "#b81e29",
  "--error-color-hover": "#b91c1c",
  "--highlight-bg": "#fff3a3",
  "--highlight-text": "inherit",
  "--hover-bg": "rgba(0, 0, 0, 0.06)",
  "--hover-bg-strong": "rgba(0, 0, 0, 0.08)",
  "--md-char-color": "#777777",
  "--meta-content-color": "#777777",
  "--primary-color": "#005cb9",
  "--quote-text": "#5e5e5e",
  "--selection-color": "rgba(0, 102, 204, 0.2)",
  "--sidebar-bg": "#dedddd",
  "--source-mode-bg": "rgba(0, 0, 0, 0.02)",
  "--strong-color": "#3f5663",
  "--subtle-bg": "rgba(0, 0, 0, 0.03)",
  "--subtle-bg-hover": "rgba(0, 0, 0, 0.04)",
  "--success-color": "#0f6d32",
  "--success-color-hover": "#126d34",
  "--table-border-color": "#d5d4d4",
  "--text-color": "#1a1a1a",
  "--text-secondary": "#5e5e5e",
  "--text-tertiary": "#7d7d7d",
  "--warning-bg": "rgba(245, 158, 11, 0.1)",
  "--warning-bg-active": "rgba(245, 158, 11, 0.2)",
  "--warning-bg-hover": "rgba(245, 158, 11, 0.15)",
  "--warning-border": "rgba(245, 158, 11, 0.3)",
  "--warning-color": "#815600",
}
`;

exports[`emitted legacy CSS vars (behavior-preserving contract) > sepia theme emits the frozen var set 1`] = `
{
  "--accent-bg": "rgba(139, 69, 19, 0.1)",
  "--accent-primary": "#8b4513",
  "--accent-text": "#8b4513",
  "--alert-caution": "#b51e28",
  "--alert-important": "#6d43bc",
  "--alert-note": "#0859ba",
  "--alert-tip": "#166b2e",
  "--alert-warning": "#7e5400",
  "--bg-color": "#F9F0DB",
  "--bg-secondary": "#ebdfc2",
  "--bg-tertiary": "#e0d5bc",
  "--block-bg-subtle": "rgba(0, 0, 0, 0.02)",
  "--block-bg-subtle-hover": "rgba(0, 0, 0, 0.04)",
  "--blur-text-color": "#c8c8c8",
  "--border-color": "#e0d5bc",
  "--code-bg-color": "#ebdfc2",
  "--code-border-color": "#e0d5bc",
  "--code-text-color": "#1a1a1a",
  "--contrast-text": "white",
  "--control-border": "#8c7d67",
  "--emphasis-color": "#8b3a2f",
  "--error-bg": "#ffebe9",
  "--error-color": "#b51e28",
  "--error-color-hover": "#b61c1c",
  "--highlight-bg": "#fff3a3",
  "--highlight-text": "inherit",
  "--hover-bg": "rgba(0, 0, 0, 0.06)",
  "--hover-bg-strong": "rgba(0, 0, 0, 0.08)",
  "--md-char-color": "#777777",
  "--meta-content-color": "#777777",
  "--primary-color": "#8b4513",
  "--quote-text": "#5c5c5c",
  "--selection-color": "rgba(139, 69, 19, 0.2)",
  "--sidebar-bg": "#ebdfc2",
  "--source-mode-bg": "rgba(0, 0, 0, 0.02)",
  "--strong-color": "#4a3728",
  "--subtle-bg": "rgba(0, 0, 0, 0.03)",
  "--subtle-bg-hover": "rgba(0, 0, 0, 0.04)",
  "--success-color": "#0e6b30",
  "--success-color-hover": "#126b33",
  "--table-border-color": "#e0d5bc",
  "--text-color": "#5c4b37",
  "--text-secondary": "#5c5c5c",
  "--text-tertiary": "#7f7f7f",
  "--warning-bg": "rgba(245, 158, 11, 0.1)",
  "--warning-bg-active": "rgba(245, 158, 11, 0.2)",
  "--warning-bg-hover": "rgba(245, 158, 11, 0.15)",
  "--warning-border": "rgba(245, 158, 11, 0.3)",
  "--warning-color": "#7e5400",
}
`;

exports[`emitted legacy CSS vars (behavior-preserving contract) > solarized theme emits the frozen var set 1`] = `
{
  "--accent-bg": "rgba(38, 139, 210, 0.14)",
  "--accent-primary": "#53a4de",
  "--accent-text": "#53a4de",
  "--alert-caution": "#e97e7c",
  "--alert-important": "#9599d5",
  "--alert-note": "#55a4dc",
  "--alert-tip": "#94a620",
  "--alert-warning": "#bf9821",
  "--bg-color": "#002b36",
  "--bg-secondary": "#073642",
  "--bg-tertiary": "#0a3a47",
  "--block-bg-subtle": "rgba(255, 255, 255, 0.03)",
  "--block-bg-subtle-hover": "rgba(255, 255, 255, 0.05)",
  "--blur-text-color": "#586e75",
  "--border-color": "#0e4753",
  "--code-bg-color": "#073642",
  "--code-border-color": "#0e4753",
  "--code-text-color": "#93a1a1",
  "--contrast-text": "#001519",
  "--control-border": "#628084",
  "--emphasis-color": "#cb9b6e",
  "--error-bg": "rgba(220, 50, 47, 0.15)",
  "--error-color": "#e97e7c",
  "--error-color-hover": "#e87f7c",
  "--highlight-bg": "#4a4a00",
  "--highlight-text": "#fdf6e3",
  "--hover-bg": "rgba(255, 255, 255, 0.08)",
  "--hover-bg-strong": "rgba(255, 255, 255, 0.12)",
  "--md-char-color": "#859900",
  "--meta-content-color": "#859900",
  "--primary-color": "#53a4de",
  "--quote-text": "#91a0a2",
  "--selection-color": "rgba(38, 139, 210, 0.16)",
  "--sidebar-bg": "#073642",
  "--source-mode-bg": "rgba(255, 255, 255, 0.02)",
  "--strong-color": "#72a2cb",
  "--subtle-bg": "rgba(255, 255, 255, 0.04)",
  "--subtle-bg-hover": "rgba(255, 255, 255, 0.06)",
  "--success-color": "#94a620",
  "--success-color-hover": "#a0b200",
  "--table-border-color": "#0e4753",
  "--text-color": "#93a1a1",
  "--text-secondary": "#91a0a2",
  "--text-tertiary": "#6a7e84",
  "--warning-bg": "rgba(181, 137, 0, 0.12)",
  "--warning-bg-active": "rgba(245, 158, 11, 0.2)",
  "--warning-bg-hover": "rgba(245, 158, 11, 0.15)",
  "--warning-border": "rgba(181, 137, 0, 0.3)",
  "--warning-color": "#bf9821",
}
`;

exports[`emitted legacy CSS vars (behavior-preserving contract) > white theme emits the frozen var set 1`] = `
{
  "--accent-bg": "rgba(0, 102, 204, 0.1)",
  "--accent-primary": "#0065ca",
  "--accent-text": "#0065ca",
  "--alert-caution": "#c9212d",
  "--alert-important": "#7a4bd1",
  "--alert-note": "#0964d0",
  "--alert-tip": "#187734",
  "--alert-warning": "#8d5e00",
  "--bg-color": "#FFFFFF",
  "--bg-secondary": "#eeeeee",
  "--bg-tertiary": "#e7e7e7",
  "--block-bg-subtle": "rgba(0, 0, 0, 0.02)",
  "--block-bg-subtle-hover": "rgba(0, 0, 0, 0.04)",
  "--blur-text-color": "#c8c8c8",
  "--border-color": "#eeeeee",
  "--code-bg-color": "#eeeeee",
  "--code-border-color": "#eeeeee",
  "--code-text-color": "#1a1a1a",
  "--contrast-text": "white",
  "--control-border": "#888888",
  "--emphasis-color": "#5b0411",
  "--error-bg": "#ffebe9",
  "--error-color": "#c9212d",
  "--error-color-hover": "#b91c1c",
  "--highlight-bg": "#fff3a3",
  "--highlight-text": "inherit",
  "--hover-bg": "rgba(0, 0, 0, 0.06)",
  "--hover-bg-strong": "rgba(0, 0, 0, 0.08)",
  "--md-char-color": "#777777",
  "--meta-content-color": "#777777",
  "--primary-color": "#0065ca",
  "--quote-text": "#666666",
  "--selection-color": "rgba(0, 102, 204, 0.2)",
  "--sidebar-bg": "#eeeeee",
  "--source-mode-bg": "rgba(0, 0, 0, 0.02)",
  "--strong-color": "#3f5663",
  "--subtle-bg": "rgba(0, 0, 0, 0.03)",
  "--subtle-bg-hover": "rgba(0, 0, 0, 0.04)",
  "--success-color": "#107736",
  "--success-color-hover": "#147739",
  "--table-border-color": "#eeeeee",
  "--text-color": "#1a1a1a",
  "--text-secondary": "#666666",
  "--text-tertiary": "#888888",
  "--warning-bg": "rgba(245, 158, 11, 0.1)",
  "--warning-bg-active": "rgba(245, 158, 11, 0.2)",
  "--warning-bg-hover": "rgba(245, 158, 11, 0.15)",
  "--warning-border": "rgba(245, 158, 11, 0.3)",
  "--warning-color": "#8d5e00",
}
`;
